# The-Hidden-Route

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  Doxyfile.internal  Doxyfile.internal.in  README.md  README.zh.md  TODO.md  configs.json
.github/workflows/: cmake-multi-platform.yml  pr-cache-cleanup.yml
assets/json/: configs.json  level1.json  level2.json  level_graph.json  special_level.json
assets/lua_scripts/: level1.lua  level2.lua  level_graph_screen.lua  main_menu.lua
file_versions/: file_versions.dox
file_versions/helper/: generate_file_version.cpp.md  generate_level.cpp.md
file_versions/include/thr/: base.hpp.md  ecs.hpp.md  thr.hpp.md
file_versions/include/thr/base/: assert_msg.hpp.md  concepts.hpp.md  config.hpp.md  file.hpp.md  floating_point_compare.hpp.md  observable.hpp.md  overload.hpp.md  sfml_formatter.hpp.md  sfml_helper.hpp.md
file_versions/include/thr/ecs/: components.hpp.md  configs.hpp.md  lua_bindings.hpp.md  systems.hpp.md
file_versions/include/thr/ecs/components/: level_components.hpp.md  level_graph_components.hpp.md  maze_components.hpp.md  maze_line_components.hpp.md  player_components.hpp.md
file_versions/include/thr/ecs/components/global/: game_base.hpp.md  game_state_components.hpp.md  scene_components.hpp.md
file_versions/include/thr/ecs/lua_bindings/: entity_wrapper.hpp.md  game_api.hpp.md  lua_manager.hpp.md
file_versions/include/thr/ecs/systems/: level_graph_render_system.hpp.md  level_graph_serialization_system.hpp.md  level_render_system.hpp.md  level_serialization_system.hpp.md  maze_render_system.hpp.md  maze_serialization_system.hpp.md  player_movement_system.hpp.md
file_versions/include/thr/ecs/systems/global/: game_state_manager.hpp.md  scene_system.hpp.md
file_versions/main/: game_states.cpp.md  game_states.hpp.md  main.cpp.md
file_versions/src/thr/base/: file.cpp.md
file_versions/src/thr/ecs/lua_bindings/: lua_manager.cpp.md
file_versions/src/thr/ecs/systems/: level_graph_render_system.cpp.md  level_graph_serialization_system.cpp.md  level_render_system.cpp.md  level_serialization_system.cpp.md  maze_render_system.cpp.md  maze_serialization_system.cpp.md  player_movement_system.cpp.md
file_versions/src/thr/ecs/systems/global/: game_state_manager.cpp.md  scene_system.cpp.md
file_versions/tests/thr/base/: test_assert_msg.cpp.md  test_floating_point_compare.cpp.md  test_observable.cpp.md  test_overload.cpp.md  test_sfml_formatter.cpp.md  test_sfml_helper.cpp.md
file_versions/tests/thr/ecs/systems/: test_level_graph_render_system.cpp.md  test_level_graph_serialization_system.cpp.md  test_level_render_system.cpp.md  test_level_serialization_system.cpp.md  test_maze_render_system.cpp.md  test_maze_serialization_system.cpp.md  test_scene_system.cpp.md
helper/: CMakeLists.txt  changelog_version.template.md  file_version.template.md  generate_code_issues.py  generate_file_version.cpp  generate_level.cpp  helper_base.py  move_source_file.py
include/thr/: base.hpp  ecs.hpp  thr.hpp
include/thr/base/: assert_msg.hpp  concepts.hpp  config.hpp  config.hpp.in  file.hpp  floating_point_compare.hpp  observable.hpp  overload.hpp  sfml_formatter.hpp  sfml_helper.hpp
include/thr/ecs/: components.hpp  configs.hpp  lua_bindings.hpp  systems.hpp
include/thr/ecs/components/: level_components.hpp  level_graph_components.hpp  maze_components.hpp  maze_line_components.hpp  player_components.hpp
include/thr/ecs/components/global/: game_base.hpp  game_state_components.hpp  scene_components.hpp
include/thr/ecs/lua_bindings/: entity_wrapper.hpp  game_api.hpp  lua_manager.hpp
include/thr/ecs/systems/: level_graph_render_system.hpp  level_graph_serialization_system.hpp  level_render_system.hpp  level_serialization_system.hpp  maze_render_system.hpp  maze_serialization_system.hpp  player_movement_system.hpp
include/thr/ecs/systems/global/: game_state_manager.hpp  scene_system.hpp
main/: CMakeLists.txt  game_states.cpp  game_states.hpp  level1.json  level_graph.json  main.cpp
schema/: level-v0.1.0-2.schema.json  level-v0.1.0-3.schema.json  level-v0.1.0-4.schema.json  level_graph-v0.1.0-1.schema.json  level_graph-v0.1.0-2.schema.json  maze-v1.schema.json  types.schema.json
src/: CMakeLists.txt
src/thr/base/: file.cpp
src/thr/ecs/lua_bindings/: lua_manager.cpp
src/thr/ecs/systems/: level_graph_render_system.cpp  level_graph_serialization_system.cpp  level_render_system.cpp  level_serialization_system.cpp  maze_render_system.cpp  maze_serialization_system.cpp  player_movement_system.cpp
src/thr/ecs/systems/global/: game_state_manager.cpp  scene_system.cpp
tests/: CMakeLists.txt
tests/thr/base/: test_assert_msg.cpp  test_floating_point_compare.cpp  test_observable.cpp  test_overload.cpp  test_sfml_formatter.cpp  test_sfml_helper.cpp
tests/thr/ecs/systems/: level_example.json  maze.json  test_level_graph_render_system.cpp  test_level_graph_serialization_system.cpp  test_level_render_system.cpp  test_level_serialization_system.cpp  test_maze_render_system.cpp  test_maze_serialization_system.cpp  test_scene_system.cpp
typings/: entity.d.lua  game.d.lua  logger.d.lua  vector2.d.lua
